==> ycsin/zephyr/drivers/serial/uart_max32.c <==
#include <zephyr/drivers/dma.h>
#include <zephyr/intc2.h>
#include <wrap_max32_dma.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/uart.h>
#include <zephyr/pm/policy.h>
#include <zephyr/sys/atomic.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/pm/device.h>
#include <zephyr/drivers/clock_control/adi_max32_clock_control.h>
#include <wrap_max32_uart.h>
#define DT_DRV_COMPAT adi_max32_uart
#define MAX32_UART_TX_CACHE_NUM 2

static void uart_max32_isr(const struct device *dev)
{
	struct max32_uart_data *data = dev->data;
#if (defined(CONFIG_PM) && defined(CONFIG_UART_CONSOLE_INPUT_EXPIRED)) || \
	defined(CONFIG_UART_ASYNC_API)
	const struct max32_uart_config *cfg = dev->config;
	uint32_t intfl;
#endif


#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	if (data->cb) {
		data->cb(dev, data->cb_data);
	}
#if defined(CONFIG_PM) && defined(CONFIG_UART_CONSOLE_INPUT_EXPIRED)
	intfl = MXC_UART_GetFlags(cfg->regs);
	if (intfl & ADI_MAX32_UART_INT_RX) {
		k_timeout_t delay = K_MSEC(CONFIG_UART_CONSOLE_INPUT_EXPIRED_TIMEOUT);

		uart_max32_pm_policy_state_lock_get(dev, MAX32_UART_PM_POLICY_STATE_RX_FLAG);
		k_work_reschedule(&data->rx_refresh_timeout_work, delay);
	}
#endif
#endif /* CONFIG_UART_INTERRUPT_DRIVEN */

#ifdef CONFIG_UART_ASYNC_API
	intfl = MXC_UART_GetFlags(cfg->regs);
	if (data->async.rx.timeout != SYS_FOREVER_US && data->async.rx.timeout != 0 &&
	    (intfl & ADI_MAX32_UART_INT_RX)) {
		k_work_reschedule(&data->async.rx.timeout_work, K_USEC(data->async.rx.timeout));
	}
	/* Clear RX/TX interrupts flag after cb is called */
	MXC_UART_ClearFlags(cfg->regs, intfl);
#endif /* CONFIG_UART_ASYNC_API */
}

static int uart_max32_init(const struct device *dev)
{
	int ret;
	const struct max32_uart_config *const cfg = dev->config;
	mxc_uart_regs_t *regs = cfg->regs;
	struct max32_uart_data *data = dev->data;

	if (!device_is_ready(cfg->clock)) {
		LOG_ERR("Clock control device not ready");
		return -ENODEV;
	}

	ret = MXC_UART_Shutdown(regs);
	if (ret) {
		return ret;
	}

	data->uart_dev = dev;

#if CONFIG_UART_ASYNC_API
	k_work_init_delayable(&data->async.tx.timeout_work, uart_max32_async_tx_timeout);
	k_work_init_delayable(&data->async.rx.timeout_work, uart_max32_async_rx_timeout);
	data->async.rx.len = 0;
	data->async.rx.offset = 0;
#endif

#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	k_timer_init(&data->timer, &uart_max32_soft_isr, NULL);
	k_timer_user_data_set(&data->timer, (void *)dev);
#endif

#if defined(CONFIG_PM) && defined(CONFIG_UART_CONSOLE_INPUT_EXPIRED)
	k_work_init_delayable(&data->rx_refresh_timeout_work, uart_max32_rx_refresh_timeout);
#endif

	return pm_device_driver_init(dev, uart_max32_pm_action);
}
